web-infras/parser/tests/fixtures/babel/es2017/async-functions/6/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,15)
1|async () => {}()
 |             ^
[SyntaxError]: Parentheses expression can not be empty. (1,15)
1|async () => {}()
 |             ^
